12-css-basic-layouting/project/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');

*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body{
    background: linear-gradient(135deg,
    #0b1c38 0%,
  #0f1419 100%);
    color: #b8c5d6;
    font-family: "Nunito Sans" , Arial, Helvetica, sans-serif;
}

/* Benner Section */
.top-banner{
    text-align: center;
    font-family: "Inter";
    font-weight: bold;
    height: 50px;
    background: linear-gradient(135deg,
    #f08206 0%,
    #eec407 100%);
    color: black;
    padding: 20px;
}

/* ======== NAVIGATION ================= */
.navbar{
    background-color:#1f2a3f;
    height: 60px;
    border-bottom: 3px solid #444e5e ;
    position: sticky;
    top: 0;
    padding: 20px;
    line-height: 20px;
    z-index: 99999;
}
.navbar .nav-logo{
    font-family: "Inter";
    font-weight: bold;
    font-size: 2em;
    text-decoration: none;
    color: rgb(95, 43, 226);
    float: left;
    margin-bottom: 20px;
}

.navbar .nav-menu li{
    display: inline-block;
    float: right;
}
.navbar .nav-menu li a{
    font-weight: bold;
    color: aliceblue;
    text-decoration: none;
    margin: 0 20px;
    text-transform: uppercase;
    
}
/* ========= Heading Typography ========= */

h2,h3,h4{
    font-family: "Inter";
}
/* ============= Stream Card =============== */
.bio{
    background-color: #1f2a3f;
    width: 900px;
    margin: 50px auto;
    border-radius: 15px;
    border: 1px solid #474b53;
    box-shadow: 0 0 8px 0 rgb(50, 51, 58);
}
.bio .content-container{
    padding: 50px;
}
.bio .content-container img{
    height: 200px;
    width: 200px;
    border: 5px solid rgb(79, 79, 250);
    border-radius: 10px;
    margin-right: 30px;
    margin-bottom: 10px;
}

/* Image Float */
.bio-img{
    float: left;
}

.bio .content-container h2{
    margin-bottom: 20px;
    font-size: 2em;
    background: linear-gradient(to right, #0f43ed, #f555ea);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}


/* ======== PROFLE STATUS ========  */
.card-container .profile-wrapper img{
    width: 400px;
    border-radius: 15px;
    border: 4px solid white;
}

.card-container .profile-wrapper{
    width: 400px;
    position: relative;
    margin: 0 auto;
    margin-bottom: 40px;
}
.badge{
    position: absolute;
    top: 20px;
    right: 20px;
    background-color: rgb(245, 43, 43);
    color: white;
    border-radius: 15px;
    padding: 10px;
    font-weight: bold;
}

